# DictaChat

./: .deployment_state  .env.heb  .env.template  .gitignore  .mcp.json  AGENTS.md  BENCHMARK-DICTACHAT-HEB.md  BENCHMARK-DICTACHAT.md  CLAUDE.md  CODE_OF_CONDUCT-HEB.md  CODE_OF_CONDUCT.MD  CONTRIBUTING-HEB.md  CONTRIBUTING.md  Dockerfile.BAAI  LICENSE  LICENSE-HEB.md  MEMORY_SYSTEM_VALIDATION.md  MEMORY_WIRING_GAP_ANALYSIS.md  README-ENG.md  README-HEB.md  README.md  ROAMPAL_V0209_GAP_ANALYSIS.md  ROAMPAL_V0210_GAP_ANALYSIS.md  Roampal_Architecture.md  SECURITY-HEB.md  SECURITY.md  STATUS.md  add_mcp_guidelines.md  bottleneck.md  cause.md  chat_template.jinja2.template  check_llama.py  clawd_memory_prompt.md  codespace_code_rules.md  codespace_gaps.md  codespace_gaps_enhanced.md  codespace_gemini.md  codespace_gpt52.md  codespace_kimi.md  codespace_logs.md  (+38 more)
BAAI/: pyproject.toml
BAAI/src/: main.py
BAAI/src/api/: server.py
BAAI/src/api/dtos/: create_embeddings_dto.py  create_embeddings_result_dto.py  error_response_dto.py  health_check_result_dto.py  model_action_result_dto.py  model_status_dto.py
BAAI/src/api/handlers/: global_exception_handler.py
BAAI/src/api/middlewares/: process_time_middleware.py
BAAI/src/api/routers/: embedding_router.py  health_check_router.py  model_router.py  reranker_router.py
BAAI/src/application/usecases/: create_embeddings_usecase.py  get_model_status_usecase.py  load_model_usecase.py  unload_model_usecase.py
BAAI/src/core/config/: app_config.py
BAAI/src/core/cuda/: cuda_checker.py
BAAI/src/core/logger/: logger.py
BAAI/src/core/timer/: timer.py
BAAI/src/data/factories/: embedding_worker_factory.py
BAAI/src/data/repositories/: embedding_model_repository_impl.py
BAAI/src/data/workers/: base_worker.py  bge_m3_embedding_worker.py
BAAI/src/domain/exceptions/: invalid_interval_error.py  unsupported_model_configuration_error.py  worker_not_running_error.py
roampal/: .env.example  Cargo.toml  LATEST_CORE_ARCHITECTURE.md  __init__.py  architecture.md  build.md  cli.py  index.html  package-lock.json  package.json  pyproject.toml  tauri.conf.json
roampal/backend/: main.py  requirements.txt
roampal/backend/api/: book_upload_api.py
roampal/backend/personality/: active.txt
roampal/backend/prompts/: book_extraction.txt
roampal/mcp/: __init__.py  server.py
roampal/tauri-ui/: .env.ui
(+1855 files in other folders)
