[package]
name = "DictaChat Memory System"
version = "1.0.0"
description = "DictaChat - Local Hebrew AI that actually remembers"
authors = ["DictaChat"]
license = "Apache-2.0"
edition = "2026"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]